PLANET-7650 Fix News & Stories top spacing
This was due to the presence of a clearfix div between the content and the header

--- a/assets/src/scss/pages/_page.scss
+++ b/assets/src/scss/pages/_page.scss
@@ -70,18 +70,6 @@
   }
 }
 
-.with-mobile-tabs {
-  @include medium-and-less {
-    & ~ :not(.page-header) + .page-content {
-      padding-top: calc(var(--navbar-menu-height--small));
-    }
-
-    & ~ .featured-posts + .page-content {
-      padding: 0;
-    }
-  }
-}
-
 .single-campaign {
   .page-content {
     > p:last-child {
